# LucasServerFramework

./: CMakeLists.txt  main.cpp
Server/: HttpRequestHandler.cpp  HttpRequestHandler.h  HttpServer.cpp  HttpServer.h
Server/Element/: AppConfig.cpp  AppConfig.h  Element.cpp  Element.h  Filter.cpp  Filter.h  Router.cpp  Router.h
Server/Log/: Logger.cpp  Logger.h
StandardElements/: HelloWorldRouter.cpp  HelloWorldRouter.h  HttpRequestParser.cpp  HttpRequestParser.h  SimpleErrorHandler.cpp  SimpleErrorHandler.h  TimerFilter.cpp  TimerFilter.h
